roles/k3s/files/debug-shell.yaml
# This spec just creates a simple pod that doesn't do much,
# so you can test if shell access works via kubectl.
apiVersion: v1
kind: Pod
metadata:
  name: shell-demo
spec:
  volumes:
    - name: shared-data
      emptyDir: {}
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: shared-data
          mountPath: /usr/share/nginx/html
  dnsPolicy: Default
  # To target to specific host:
  # nodeSelector:
  #   kubernetes.io/hostname: <hostname>
