roles/k3s/files/calico-global-networkpolicy-allow-ping.yaml
# https://projectcalico.docs.tigera.io/security/icmp-ping#allow-icmp-ping-all-workloads-and-host-endpoints
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-ping
spec:
  selector: all()
  types:
    - Ingress
  ingress:
    # Allow ICMP echo (ping) over IPv4 and IPv6
    - action: Allow
      protocol: ICMP
      icmp:
        type: 8
    - action: Allow
      protocol: ICMPv6
      icmp:
        type: 128
