roles/k3s/files/calico-global-networkpolicy-host.yaml
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: edge-host-worker
spec:
  selector: "chi.edge/local_egress == 'deny'"
  applyOnForward: True # applies to all traffic through host interfaces
  order: 100 #lowest priority, after other rules
  types:
    - Egress
  egress:
    # don't block traffic to known k8s pods,hosts,etc
    - action: Allow
      destination:
        selector: all() #all endpoints known to k8s
    # if traffic isn't going to a k8s endpoint, allow it
    - action: Deny
      destination:
        nets:
          - 10.0.0.0/8
          - 172.16.0.0/12
          - 192.168.0.0/16
    # allow egress traffic not matched above
    - action: Allow
