roles/k3s/files/debug-pingtest.yaml
# This spec will launch some number of pods (see "replicas") on as many hosts
# in the cluster as possible.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingtest
spec:
  selector:
    matchLabels:
      app: pingtest
  replicas: 3
  template:
    metadata:
      labels:
        app: pingtest
    spec:
      affinity:
        # Try to schedule on as many nodes as possible
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - pingtest
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: pingtest
          image: busybox
          command: ["sleep", "infinity"]

---
# Network policy to allow traffic b/w pods on same namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-local
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
  egress:
    - {}
  policyTypes:
    - Ingress
    - Egress
